# pyscaffold

./: .cirrus.yaml  .cirrus.yml  .coveragerc  .editorconfig  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  CONTRIBUTING.rst  COPYING  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  environment.yaml  environment.yml  git.py  hg.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  version.py  versioneer.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql-analysis.yml  make-demo-repo.yml  publish-package.yml
debian/: changelog  control  rules  watch
debian/source/: options
doc/source/: conf.py  index.rst
docs/: Makefile  action-pipeline.rst  advanced.rst  changes.rst  conda.rst  conf.py  configuration.rst  contrib.rst  cookiecutter-integration.rst  cookiecutter.rst  dependencies.rst  dev-guide.rst  environment.yaml  environment.yml  example_setup.cfg  examples.rst  extensions.rst  faq.rst  features.rst  index.rst  install.rst  license.rst  migration.rst  project-structure.rst  python-api.rst  reasons.rst  requirements.txt  updating.rst  usage.rst
docs/_static/: .gitignore  custom.css
docs/examples/: cirrus-extension.rst  cookiecutter-extension.rst  django-extension.rst  gitlab-ci-extension.rst  index.rst  namespace-extension.rst  no-skeleton-extension.rst  no-tox-extension.rst  pre-commit-extension.rst  tox-extension.rst  travis-extension.rst
docs/gfx/: demo.cast
pbr/: core.py  git.py  packaging.py  util.py  version.py
pbr/tests/: test_integration.py  test_packaging.py  test_util.py  test_wsgi.py
pyscaffold/: __init__.py  _version.py  api.py  cli.py  exceptions.py  info.py  integration.py  log.py  pytest_runner.py  repo.py  runner.py  shell.py  structure.py  templates.py  utils.py
pyscaffold/api/: __init__.py  helpers.py
pyscaffold/contrib/: __init__.py
pyscaffold/contrib/pbr/: .gitignore  .mailmap  .zuul.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  lower-constraints.txt  setup.cfg  test-requirements.txt  tox.ini
pyscaffold/contrib/pbr/doc/source/: compatibility.rst  conf.py  index.rst
pyscaffold/contrib/pbr/doc/source/user/: features.rst  history.rst  index.rst  semver.rst  using.rst
pyscaffold/contrib/pbr/pbr/: builddoc.py  packaging.py  util.py
pyscaffold/contrib/pbr/pbr/cmd/: main.py
pyscaffold/contrib/pbr/pbr/tests/: test_integration.py  test_packaging.py  test_setup.py
pyscaffold/contrib/pbr/releasenotes/notes/: deprecate-testr-nose-integration-56e3e11248d946fc.yaml  remove-command-hooks-907d9c2325f306ca.yaml
pyscaffold/contrib/pbr/releasenotes/source/: conf.py
pyscaffold/contrib/pbr/tools/: integration.sh
pyscaffold/data/: _version.template  authors.template  changes.template  copying.template  coveragerc.template  gitattributes.template  gitignore.template  license_artistic_2.0.template  license_isc.template  license_new_bsd.template  license_simplified_bsd.template  manifest_in.template  pre-commit-config.template  readme.template  requirements.template  setup.template  setup_cfg.template  setup_py.template  skeleton.template  sphinx_conf.template  sphinx_index.template  sphinx_license.template  sphinx_makefile.template  tox.ini.template  tox_ini.template  travis.template  travis_install.template  versioneer.template
pyscaffold/extensions/: __init__.py  cookiecutter.py  django.py  external_generators.py  gitlab_ci.py  namespace.py  pre_commit.py  tox.py  travis.py
pyscaffold/templates/: __init__.py  __init__.template  _version.py  copying.py  gitignore.py  gitlab_ci.template  license_none.template  pre-commit-config.template  readme.py  readme.template  setup_cfg.template  setup_py.template  skeleton.template  sphinx_conf.template  sphinx_index.template  sphinx_makefile.template  test_requirements.template  test_skeleton.template  travis_install.template  vagrant.template
releasenotes/notes/: deprecate-pyN-requirements-364655c38fa5b780.yaml  v_version-457b38c8679c5868.yaml
releasenotes/source/: index.rst
setup_pyproject/: runner.py  structure.py
setup_pyproject/templates/: __init__.py  authors.py  gitignore.py  readme.py  setup.py  sphinx_conf.py
setuptools_scm/: __init__.py  __main__.py  git.py  hg.py  integration.py  utils.py  version.py
src/pyscaffold/: __init__.py  actions.py  api.py  cli.py  cli_parser.py  dependencies.py  exceptions.py  file_op.py  file_system.py  identification.py  info.py  integration.py  log.py  operations.py  pytest_runner.py  repo.py  shell.py  structure.py  termui.py  toml.py  update.py  utils.py  warnings.py
testing/: test_basic_api.py  test_functions.py  test_git.py  test_mercurial.py  test_regressions.py
tests/: __init__.py  conftest.py  fixtures.py  helpers.py  install.sh  log_helpers.py  system_test.sh  test_actions.py  test_api.py  test_cli.py  test_cli_parser.py  test_dependencies.py  test_examples.py  test_exceptions.py  test_extensions.py  test_file_system.py  test_identification.py  test_info.py  test_init.py  test_install.py  test_integration.py  test_log.py  test_operations.py  test_repo.py  test_runner.py  test_shell.py  test_structure.py  test_templates.py  test_termui.py  test_toml.py  test_update.py  test_utils.py  test_version.py  travis_install.sh  virtualenv.py
tests/api/: test_helpers.py
tests/demoapp/: pyproject.toml  runner.py  setup.cfg  setup.py
tests/demoapp_data/: pyproject.toml  runner.py  setup.cfg  setup.py
tests/examples/issue-506/: setup.cfg
tests/extensions/: helpers.py  incompatible_v3_api_fake_extension.py  test_cirrus.py  test_config.py  test_cookiecutter.py  test_django.py  test_edit.py  test_github_actions.py  test_gitlab_ci.py  test_interactive.py  test_namespace.py  test_no_pyproject.py  test_no_skeleton.py  test_no_tox.py  test_pre_commit.py  test_tox.py  test_travis.py  test_typed.py  test_venv.py
tests/misc/: pydse_setup.cfg
tests/update_test/: setup.cfg
(+147 files in other folders)
