[metadata]
name = demoapp
description = A demo application for PyScaffold's unit testing
author = Florian Wilhelm
author-email = Florian.Wilhelm@blue-yonder.com
license = new BSD
url = https://pyscaffold.org/
long-description = file: README.rst
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Programming Language :: Python
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools_scm>=5
    wheel

# TODO: Remove conditional requirements once `python_requires = >=3.8`
install_requires =
    importlib-resources; python_version<"3.7"
    importlib-metadata; python_version<"3.8"

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install ${name}[PDF]` like:
# PDF = ReportLab; RXP

[options.entry_points]
console_scripts =
    demoapp = demoapp.runner:run

[test]
# pytest options when running `python setup.py test`
addopts = tests --verbose

[tool:pytest]
# Options for pytest:
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov pyscaffold --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox

[aliases]
docs = build_sphinx
release = sdist bdist_wheel upload

[bdist_wheel]
universal = 1

[build_sphinx]
# Options for Sphinx build
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI serer and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats =
    sdist
    bdist_wheel
