[metadata]
description = A demo application for PyScaffold's unit testing
author = Florian Wilhelm
author_email = Florian.Wilhelm@blue-yonder.com
license = new BSD
url = http://...
package_data = data/*
classifiers = Development Status :: 5 - Production/Stable,
              Topic :: Utilities,
              Programming Language :: Python,
              Programming Language :: Python :: 2.7,
              Programming Language :: Python :: 3.3,
              Programming Language :: Python :: 3.4,
              Environment :: Console,
              Intended Audience :: Developers,
              License :: OSI Approved :: BSD License,
              Operating System :: POSIX :: Linux,
              Operating System :: Unix,
              Operating System :: MacOS,
              Operating System :: Microsoft :: Windows

[console_scripts]
demoapp_data = demoapp_data.runner:run

[data_files]
share/pyscaffold = *.rst, *.txt

[test]
cov-report = html
junitxml = junit.xml

[pytest]
flakes-ignore =
    doc/conf.py ALL

pep8-ignore =
    doc/conf.py ALL
