[metadata]
name = demoapp_data
summary = A demo application with data for PyScaffold's unit testing
author = Florian Wilhelm
author_email = Florian.Wilhelm@blue-yonder.com
license = new BSD
home-page = http://...
description-file = README.rst
classifiers = Development Status :: 5 - Production/Stable,
              Topic :: Utilities,
              Programming Language :: Python,
              Programming Language :: Python :: 2.7,
              Programming Language :: Python :: 3.3,
              Programming Language :: Python :: 3.4,
              Environment :: Console,
              Intended Audience :: Developers,
              License :: OSI Approved :: BSD License,
              Operating System :: POSIX :: Linux,
              Operating System :: Unix,
              Operating System :: MacOS,
              Operating System :: Microsoft :: Windows

[entry_points]
console_scripts =
    demoapp_data = demoapp_data.runner:run

[test]
addopts = tests
    --cov demoapp --cov-report term-missing
    --verbose

[pytest]
addopts =
    --cov demoapp --cov-report term-missing
    --verbose

[bdist_wheel]
universal = 1
