[metadata]
name = pbr
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = Python Build Reasonableness
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://docs.openstack.org/pbr/latest/
project_urls =
    Bug Tracker = https://bugs.launchpad.net/pbr/
    Documentation = https://docs.openstack.org/pbr/
    Source Code = https://git.openstack.org/cgit/openstack-dev/pbr/
requires-python = >=2.6
classifier =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5

[files]
packages =
    pbr

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
   setup.py
   pbr/tests/
api_doc_dir = reference/api

[entry_points]
distutils.setup_keywords =
    pbr = pbr.core:pbr
egg_info.writers =
    pbr.json = pbr.pbr_json:write_pbr_json
console_scripts =
    pbr = pbr.cmd.main:main

[build_sphinx]
all-files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[wheel]
universal = 1
