# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.pypa.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pyscaffoldext-company
description =  company specific extensions to allow continuous integration
               and best standards within the company
author = Carli Freudenberg
author-email = Carl.Freudenberg@company.de
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://gitlab.company.de/python-devops/pyscaffoldext-company
project-urls =
    Documentation = https://pypi.company.de/company/stable/pyscaffoldext-company/latest/+d/index.html
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Code Generators
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# Fix the pyscaffold version so we have fewer things to test
install_requires =
    pyscaffold==3.2.3
    pyscaffoldext-pyproject
    black>=20.8b1
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
# install_requires = numpy; scipy
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.6

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install pyscaffoldext-company[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    flake8
    pytest
    pytest-cov
    pytest-virtualenv
    pytest-xdist

build_docu =
    sphinx
    recommonmark

[options.entry_points]
pyscaffold.cli =
    company = pyscaffoldext.company.extension:company
# Add here console scripts like:
# console_scripts =
#     script_name = pyscaffoldext.company.module:function
# For example:
# console_scripts =
#     fibonacci = pyscaffoldext.company.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov pyscaffoldext.company --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 88
extend-ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3.post0.dev58+g6145ac0
package = company
extensions =
    no_skeleton
    namespace
    pre_commit
    tox
    travis
    custom_extension
